--- a/srcs/requirements/nodejs/srcs/www/index.css
+++ b/srcs/requirements/nodejs/srcs/www/index.css
@@ -1,36 +1,90 @@
 html, body {
     margin: 0;
     padding: 0;
-    }
-   body {
-    background-color: white; 
-    font-family: Verdana, sans-serif; 
-    font-size: 100%;
-    }
-   h1 {
-    font-size: 200%; 
-    color: navy; 
-    text-align: center;
-    }
-   h2 {
-    font-size: 150%; 
-    color: red; 
-    padding-left: 15px;
-    }
-   p,ul,li,td {
-    color: black; 
-    }
-   a:link {
-    color: green;
-    text-decoration: underline;
-    }
-   a:visited {
-    color: gray;
-    }
-   a:hover {
-    color: red;
-    text-decoration: none;
-   }
-   a:active, a:focus {
-    color: red;
-   }
+}
+body {
+background-color: white; 
+font-family: Verdana, sans-serif; 
+font-size: 100%;
+}
+h1 {
+font-size: 200%; 
+color: rgb(0, 0, 0); 
+text-align: center;
+}
+h2 {
+font-size: 150%; 
+color: rgb(255, 255, 255); 
+padding-left: 15px;
+}
+p,ul,li,td {
+color: black; 
+}
+
+img {
+    width: 10%;
+    height: 10%;
+    text-align: center;;
+    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.ingredient {
+    list-style-type: none;
+	margin: auto;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	padding: 0;
+	overflow: hidden;
+	background-color: #4b8fbd;
+	width: 90%;
+	border-radius: 6px;
+	line-height: 25px;
+}
+
+.preparation {
+    list-style-type: none;
+	margin: auto;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	padding: 0;
+	overflow: hidden;
+	background-color: #4b8fbd;
+	width: 90%;
+	border-radius: 6px;
+	line-height: 25px;
+}
+
+ul[class="nav"] {
+	list-style-type: none;
+	margin: 0;
+	margin-bottom: 10;
+	padding: 0;
+	overflow: hidden;
+	background-color: #0164a5;
+	width: 100%;
+	border-radius: 4px;
+	line-height: 25px;
+
+}
+
+li[class='1'] {
+	float: left;
+}
+
+li[class='1'] a {
+	display: block;
+	font-family: Arial, sans-serif;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	margin-top: 4px;
+
+}
+
+a.scrollUp{
+	color: white;
+}
